# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  config.py  db_manager.py  page_checker.py  utils.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: footer.html  messages.html  nav.html
page_analyzer/templates/urls/: default.html  detail.html  list.html
